# AAA_Metadata_System

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  config.json  pyproject.toml  pytest.ini  requirements.txt
.github/: pr-template.md
data/: color_names_basic_hex.csv  merged_colors.csv
documentation/: CONFIG_GUIDE.md  Differences Between Hash Algorithms.md  ENHANCEMENTS_SUMMARY.md  EXTERNAL_INTEGRATION_SUCCESS.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_STATUS_REPORT.md  FLATTEN_NODE_V02_CUSTOM_FEATURES.md  FLATTEN_NODE_V02_SUMMARY.md  Improvement_Plan_1125.md  MULTI_LORA_PLATFORM_NODES_README.md  PLATFORM_LORA_ARCHITECTURE_DIAGRAM.md  PLATFORM_LORA_IMPLEMENTATION_SUMMARY.md  PRODUCTION_COMPLETE.md  QUICKSTART_LOAD_IMAGE.md  QUICKSTART_LOAD_IMAGE_LAYERS.md  QUICK_START_PLATFORM_LORA.md  QWEN_FLUX_LORA_LOADERS.md  README_LOAD_IMAGE.md  README_LOAD_IMAGE_LAYERS.md  READ_ME_METADATA_SYSTEM.md  RUNTIME_HOOKS_ENHANCEMENTS_SUMMARY.md  RUNTIME_HOOKS_QUICK_REFERENCE.md  SAFE_RUNTIME_HOOKS_RESEARCH.md  TUMBLR_ENHANCEMENTS_SUMMARY.md  WAN22_NODES_COMPARISON.md  WAN22_NODES_README.md  WAN22_SIZE_PRESET_README.md  WAN22_SIZE_PRESET_SUMMARY.md  WAN22_V2.2_SIZE_PRESETS_UPDATE.md  WORDCLOUD_ENHANCEMENTS_SUMMARY.md  WORDCLOUD_FIXES_SUMMARY.md  WorkflowExtractorNodeDoc.md  WorkflowToolkitNodeDoc.md  basic_photoshop_metdata.xmp  classification_metadata_integration.md  copyright-template.py  duplicate_image_finder_node.md  edit_log.md  extending-metadata-extraction.md  insights from other node sets.md  (+12 more)
eric_metadata/: interfaces.py  service.py
(+75 files in other folders)
