[project]
name = "aaa_metadata_system"
description = "Advanced metadata management and multi-format image save/load system for ComfyUI including svg, tiff and psd with layer support."
readme = "README.md"
version = "1.0.0"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
	"Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/EricRollei/AAA_Metadata_System"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/EricRollei/AAA_Metadata_System/wiki"
"Bug Tracker" = "https://github.com/EricRollei/AAA_Metadata_System/issues"

[tool.comfy]
PublisherId = "EricRollei"
DisplayName = "AAA_Metadata_System"
Icon = ""
includes = []
"requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
